# atlas-okrs-reporting

./: .gcloudignore  .gitignore  CHANGELOG.md  README.md  config.env.example  pyproject.toml
.cursor/rules/: teamcontext.mdc
data/: teams.csv
deployment/: .cloudignore  .dockerignore  Dockerfile  cloudbuild.yaml  deploy.sh  run_job_locally.sh  setup_cloud_infrastructure.sh  setup_scheduler.sh
docs/: CLOUD_RUN.md
helpers/: README.md  __init__.py  add_timestamp_to_csv.py  config_loader.py
scripts/: export_okrs_csv.sh  scrap_okrs.sh  setup_venv_uv.sh
sql/: create_external_table.sql  example_queries.sql
src/: __init__.py  cloud_run_okrs_job.py
tools/: README.md  __init__.py  analyse_okr_coverage_in_bq.py  generate_okr_fix_messages.py  generate_okr_tree_from_bq.py  okrs_sanity_check_bq_data.py  okrs_sanity_check_scrap_data.py  post_okr_comments.py
tools/bq/: README.md  analyse_okr_coverage_in_bq.py  generate_okr_tree_from_bq.py  run_okr_health_check_bq.py  setup_external_table.py
